# Platform

./: .astylerc  .gitignore  CMakeLists.txt  ConsoleTextColor.c  ConsoleTextColor.h  Logger.c  Logger.h  Platform.h.in  PlatformTime.c  PlatformTime.h  Version.c  Version.h  defines.h  fnmatch.c  fnmatch.h  strndup.c  strndup.h  strnlen.c  strnlen.h
